fix: content wrapping on feed page and button layout

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -10,6 +10,7 @@
 	border-radius: 2em;
 	transition: var(--time) ease-in-out;
 	transition-property: color, background-color;
+	text-align: center;
 
 	&:hover {
 		background-color: var(--color-text);
