--- a/src/styles/components/_feed-header.scss
+++ b/src/styles/components/_feed-header.scss
@@ -30,10 +30,13 @@
 	}
 
 	&__url {
+		display: block;
+		margin-block-end: var(--size-4);
 		font-size: var(--font-size-2);
 		font-family: var(--font-code);
 		font-stretch: var(--font-stretch-11);
 		color: var(--grey-invert-7);
+		word-break: break-word;
 	}
 
 	&__item-count {
